[pegasus] Removes -XX:MaxPermSize JVM argument now that we are fully on JDK8
We could get rid of all the warning messages during build like the following.
'Java HotSpot(TM) 64-Bit Server VM warning: ignoring option MaxPermSize=256m'

RB=770138
G=si-dev
A=aponniah