@@ -8,10 +8,6 @@ test {
   minHeapSize = '128m'
   maxHeapSize = '512m'
 
-  //MaxPermSize is only for Java 6 and 7. When provided to Java 8, the following warning will be generated, but compilation will continue:
-  //Java HotSpot(TM) 64-Bit Server VM warning: ignoring option MaxPermSize=256m; support was removed in 8.0
-  jvmArgs '-XX:MaxPermSize=256m'
-
   forkEvery = 1
   maxParallelForks = 4
 }
